force-app/main/default/objects/Order__c/fields/External_Order_id__c.field-meta.xml
<CustomField>
    <fullName>External_Order_id__c</fullName>
    <label>External Order id</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>